--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@ h6 {
 
 
 </style>
-    <script src="https://apis.mappls.com/advancedmaps/api/eb915ef7091b62c6382ec96557858e3f/map_sdk?v=3.0&layer=vector"></script>
+    <script src="https://apis.mappls.com/advancedmaps/api/{API_TOKEN}/map_sdk?v=3.0&layer=vector"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
