--- a/about.html
+++ b/about.html
@@ -3,6 +3,8 @@
 <head>
     <title>About Us</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
     <style>
 .container {
     text-align: center;
@@ -39,9 +41,7 @@ header h1 {
     line-height: 1.6;
 }
 
-
-
-    </style>
+</style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -56,6 +56,12 @@ header h1 {
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="bar.html">Bar Graph</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="doughnut.html">Doughnut Graph</a>
                 </li>
             </ul>
         </div>
@@ -79,8 +85,7 @@ header h1 {
         
     </section>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    
+
 </body>
 </html>
