--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@ h6 {
 
 
 </style>
-    <script src="https://apis.mappls.com/advancedmaps/api/{API_TOKEN}/map_sdk?v=3.0&layer=vector"></script>
+    <script src="https://apis.mappls.com/advancedmaps/api/eb915ef7091b62c6382ec96557858e3f/map_sdk?v=3.0&layer=vector"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
@@ -67,12 +67,19 @@ h6 {
 <div id="map"></div>       
 <script>
 var map;
-
+try{
 map = new mappls.Map('map', {
     center: [28.61, 77.23],
     zoomControl: true,
     location: true
 });
+}
+catch(error){
+    console.error('Error initializing the map:', error);
+    // Display a user-friendly error message on the page
+    document.getElementById('map').innerHTML = '<p>Failed to load the map. Please try again later.</p>';
+}
+    
 
 map.addListener('load', function() {
     var geoData = {
@@ -161,6 +168,7 @@ map.addListener('load', function() {
 
         }]
     };
+    try{
     var marker = new mappls.Marker({
         map: map,
         position: geoData,
@@ -176,6 +184,10 @@ map.addListener('load', function() {
             }
         }
     });
+}
+catch(error){
+    console.error('Error adding marker:', error);
+}
 });
 
 </script>
